--- a/gui_learning/test.ui
+++ b/gui_learning/test.ui
@@ -83,230 +83,6 @@ QPushButton:hover{image:url(./image/set2.png); border:0px;}
      <string/>
     </property>
    </widget>
-   <widget class="QWidget" name="horizontalLayoutWidget">
-    <property name="geometry">
-     <rect>
-      <x>0</x>
-      <y>100</y>
-      <width>1921</width>
-      <height>321</height>
-     </rect>
-    </property>
-    <layout class="QHBoxLayout" name="chk_layout">
-     <property name="spacing">
-      <number>40</number>
-     </property>
-     <property name="sizeConstraint">
-      <enum>QLayout::SetNoConstraint</enum>
-     </property>
-     <property name="leftMargin">
-      <number>50</number>
-     </property>
-     <property name="topMargin">
-      <number>5</number>
-     </property>
-     <property name="rightMargin">
-      <number>50</number>
-     </property>
-     <property name="bottomMargin">
-      <number>0</number>
-     </property>
-     <item>
-      <widget class="QPushButton" name="chk_temp">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_temp.png); border:0px;color : rgb(255,113,113);}
-QPushButton:hover{image:url(./image/chk_temp2.png); border:0px;color : rgb(255,113,113);}
-
-
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-69°</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="chk_hum">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_hum.png); border:0px;color:rgb(0,185,250);}
-QPushButton:hover{image:url(./image/chk_hum2.png); border:0px;color:rgb(0,185,250);}
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-74%</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="chk_co2">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_co2.png); border:0px;color:rgb(146,208,80);}
-QPushButton:hover{image:url(./image/chk_co22.png); border:0px;color:rgb(146,208,80);}
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-58</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="chk_ph2">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_ph.png); border:0px;color:rgb(38,137,242);}
-QPushButton:hover{image:url(./image/chk_ph2.png); border:0px;color:rgb(38,137,242);}
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-82</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="chk_tds">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_tds.png); border:0px;color:rgb(147,62,197);}
-QPushButton:hover{image:url(./image/chk_tds2.png); border:0px;color:rgb(147,62,197);}
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-45</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QPushButton" name="chk_light">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
-       </property>
-       <property name="font">
-        <font>
-         <family>서울남산체 EB</family>
-         <pointsize>36</pointsize>
-        </font>
-       </property>
-       <property name="cursor">
-        <cursorShape>PointingHandCursor</cursorShape>
-       </property>
-       <property name="styleSheet">
-        <string notr="true">QPushButton{image:url(./image/chk_light.png); border:0px;color:rgb(222,217,0);}
-QPushButton:hover{image:url(./image/chk_light2.png); border:0px;color:rgb(222,217,0);}
-
-
-</string>
-       </property>
-       <property name="text">
-        <string>
-
-
-19</string>
-       </property>
-      </widget>
-     </item>
-    </layout>
-   </widget>
    <widget class="QWidget" name="widget" native="true">
     <property name="geometry">
      <rect>
@@ -564,15 +340,252 @@ QPushButton:hover{image:url(./image/mon_nutri2.png); border:0px;}
    <widget class="QLabel" name="label_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>440</y>
+      <x>0</x>
+      <y>450</y>
       <width>1921</width>
-      <height>46</height>
+      <height>36</height>
      </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-bottom: 1px solid rgb(217,217,217) ;</string>
     </property>
     <property name="text">
      <string/>
     </property>
+   </widget>
+   <widget class="QWidget" name="widget_2" native="true">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>110</y>
+      <width>1920</width>
+      <height>321</height>
+     </rect>
+    </property>
+    <widget class="QWidget" name="horizontalLayoutWidget">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>0</y>
+       <width>1921</width>
+       <height>321</height>
+      </rect>
+     </property>
+     <layout class="QHBoxLayout" name="chk_layout">
+      <property name="spacing">
+       <number>40</number>
+      </property>
+      <property name="sizeConstraint">
+       <enum>QLayout::SetNoConstraint</enum>
+      </property>
+      <property name="leftMargin">
+       <number>50</number>
+      </property>
+      <property name="topMargin">
+       <number>5</number>
+      </property>
+      <property name="rightMargin">
+       <number>50</number>
+      </property>
+      <property name="bottomMargin">
+       <number>0</number>
+      </property>
+      <item>
+       <widget class="QPushButton" name="chk_temp">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_temp.png); border:0px;color : rgb(255,113,113);}
+QPushButton:hover{image:url(./image/chk_temp2.png); border:0px;color : rgb(255,113,113);}
+
+
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+69°</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="chk_hum">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_hum.png); border:0px;color:rgb(0,185,250);}
+QPushButton:hover{image:url(./image/chk_hum2.png); border:0px;color:rgb(0,185,250);}
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+74%</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="chk_co2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_co2.png); border:0px;color:rgb(146,208,80);}
+QPushButton:hover{image:url(./image/chk_co22.png); border:0px;color:rgb(146,208,80);}
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+58</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="chk_ph2">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_ph.png); border:0px;color:rgb(38,137,242);}
+QPushButton:hover{image:url(./image/chk_ph2.png); border:0px;color:rgb(38,137,242);}
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+82</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="chk_tds">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_tds.png); border:0px;color:rgb(147,62,197);}
+QPushButton:hover{image:url(./image/chk_tds2.png); border:0px;color:rgb(147,62,197);}
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+45</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QPushButton" name="chk_light">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="font">
+         <font>
+          <family>서울남산체 EB</family>
+          <pointsize>36</pointsize>
+         </font>
+        </property>
+        <property name="cursor">
+         <cursorShape>PointingHandCursor</cursorShape>
+        </property>
+        <property name="styleSheet">
+         <string notr="true">QPushButton{image:url(./image/chk_light.png); border:0px;color:rgb(222,217,0);}
+QPushButton:hover{image:url(./image/chk_light2.png); border:0px;color:rgb(222,217,0);}
+
+
+</string>
+        </property>
+        <property name="text">
+         <string>
+
+
+19</string>
+        </property>
+       </widget>
+      </item>
+     </layout>
+    </widget>
    </widget>
   </widget>
  </widget>
